--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./scss/style.css">
+    <title>Le coccole di Pepe </title>
 </head>
 
 <body>
     <header>
         <nav>
-
+            <img src="">
+            <ul>
+                <li>Home</li>
+                <li>I nostri servizi</li>
+                <li>Sconti</li>
+                <li>Novità</li>
+            </ul>
         </nav>
     </header>
 </body>
