--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Le coccole di Pepe </title>
 </head>
 
 <body>
     <header>
         <nav>
-            <img src="">
+            <img src="./assets/images/foto_1.jpg">
             <ul>
                 <li>Home</li>
                 <li>I nostri servizi</li>
                 <li>Sconti</li>
                 <li>Novità</li>
             </ul>
+            <div>
+                <input type="text" placeholder="...">
+                <button>Cerca</button>
+            </div>
         </nav>
     </header>
 </body>
