--- a/index.html
+++ b/index.html
@@ -25,6 +25,53 @@
             </div>
         </nav>
     </header>
+    <main>
+        <article>
+            <img src="./assets/images/foto2.jpg">
+            <div>
+                <h1>Pepe</h1>
+                <p>Hello a tutti, sono un micio molto dispettoso e coccoloso</p>
+                <p>Sono qua per prestarvi il mio servizio di coccole a soli 1.000€ all'ora!!!</p>
+                <button>Prenota ora!</button>
+            </div>
+        </article>
+        <section>
+            <h2>
+                Offerte del giorno!!!
+            </h2>
+            <div>
+                <img src="./assets/images/foto3.jpg">
+                <img src="./assets/images/foto4.jpg">
+                <img src="./assets/images/foto5.jpg">
+                <img src="./assets/images/foto6.jpg">
+            </div>
+        </section>
+        <h2>I nostri servizi</h2>
+        <aside>
+            <div>
+                <img src="./assets/images/foto7.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum architecto dolore dolores nisi
+                    inventore! Nemo unde officia dolorum ipsam ex aspernatur ducimus praesentium animi commodi esse.
+                    Neque accusantium reiciendis dolores.</p>
+            </div>
+            <div>
+                <img src="./assets/images/foto9.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum architecto dolore dolores nisi
+                    inventore! Nemo unde officia dolorum ipsam ex aspernatur ducimus praesentium animi commodi esse.
+                    Neque accusantium reiciendis dolores.</p>
+            </div>
+            <div>
+                <img src="./assets/images/foto10.jpg">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum architecto dolore dolores nisi
+                    inventore! Nemo unde officia dolorum ipsam ex aspernatur ducimus praesentium animi commodi esse.
+                    Neque accusantium reiciendis dolores.</p>
+            </div>
+        </aside>
+    </main>
+    <footer>
+        <p>Tel.: +39 3256854742, P. IVA:0000000</p>
+        <p>Via Milano 69, Roma, Italy</p>
+    </footer>
 </body>
 
 </html>
